@@ -23,6 +23,7 @@ namespace evf {
     unsigned int   rawCellIndex()const { return rawCellIndex_; }
     unsigned int   runNumber()   const { return runNumber_; }
     unsigned int   evtNumber()   const { return evtNumber_; }
+    unsigned int   outModId()    const { return outModId_; }
     unsigned int   type()        const { return type_; }
     
     unsigned int   payloadSize() const { return payloadSize_; }
@@ -35,8 +36,15 @@ namespace evf {
     void           writeEventData(unsigned int   rawCellIndex,
 				  unsigned int   runNumber,
 				  unsigned int   evtNumber,
+				  unsigned int   outModId,
 				  unsigned char *data,
 				  unsigned int   dataSize);
+    
+    void           writeErrorEvent(unsigned int   rawCellIndex,
+				   unsigned int   runNumber,
+				   unsigned int   evtNumber,
+				   unsigned char *data,
+				   unsigned int   dataSize);
     
     void           clear();
     
@@ -55,6 +63,7 @@ namespace evf {
     unsigned int rawCellIndex_;
     unsigned int runNumber_;
     unsigned int evtNumber_;
+    unsigned int outModId_;
     unsigned int type_;
     unsigned int payloadSize_;
     unsigned int payloadOffset_;
